fix(css): text not fitting in buttons

--- a/ajapaik/ajapaik_face_recognition/static/css/ajapaik-add-subject-data.css
+++ b/ajapaik/ajapaik_face_recognition/static/css/ajapaik-add-subject-data.css
@@ -5,11 +5,11 @@
 
 .guess-button {
     border: none;
-    width: 100px;
+    width: 115px;
     height: 90px;
     font-size: 16px;
     padding-top: 50px;
-    background-position-x: 30px;
+    background-position-x: 40px;
     background-position-y: 15px;
     background-repeat: no-repeat;
     background-color: transparent;
